fix navbar collapse menu

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -21,8 +21,12 @@ body {
   header {
     padding: 5%;
     padding-top: 10%;
-    height: 70vh;
+    margin-top: 50px;
+    height: 75vh;
     background-image: url('../images/header-background.jpg');
+    background-size: cover;
+    background-position: fixed;
+
 
     h1 {
       color: $primary-color;
